gcloud-config/google-ssl-and-loadbalance-config/panda-ev-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: panda-ev-ingress
  namespace: panda-ev-prod
  annotations:
    kubernetes.io/ingress.class: "gce"
    # ໃຊ້ Static IP ທີ່ເຮົາຈອງໄວ້
    kubernetes.io/ingress.global-static-ip-name: panda-api-ip
    # ຜູກກັບ SSL Certificate ທີ່ເຮົາຫາກໍ່ສ້າງ
    networking.gke.io/managed-certificates: panda-ev-certs
    # ບາງຄັ້ງ GKE ຕ້ອງການການຢືນຢັນເພີ່ມເຕີມ. ໃຫ້ລອງຕື່ມແຖວນີ້ເຂົ້າໄປ
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    # 1. Admin & Dashboard
    - host: admin-api.pandaev.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: panda-system-api-service
                port:
                  number: 80

    # 2. Mobile App (End-users)
    - host: api.pandaev.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: panda-mobile-api-service
                port:
                  number: 80

    # 4. Payment Gateway (BCEL OnePay QR — internal + mobile-facing)
    - host: gateway-api.pandaev.cc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: panda-gateway-api-service
                port:
                  number: 80
